[gd_scene load_steps=12 format=3 uid="uid://tf2o6bkedbwe"]

[ext_resource type="Script" path="res://Player1_3D.gd" id="1_ek1k8"]
[ext_resource type="Texture2D" uid="uid://dypabwpbld45q" path="res://icon.svg" id="1_lf1xq"]
[ext_resource type="Script" path="res://aim_reticle.gd" id="3_wfwkm"]
[ext_resource type="PackedScene" uid="uid://vax1jmmj88hq" path="res://mama_model.tscn" id="4_0p2sc"]
[ext_resource type="Script" path="res://enemy.gd" id="4_ifq1y"]
[ext_resource type="Texture2D" uid="uid://c2r7ilmldi2v" path="res://grassbg.png" id="6_shwi7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pawok"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mqpo2"]
size = Vector3(0.536987, 0.225098, 0.211426)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6ppme"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_la302"]

[sub_resource type="Environment" id="Environment_fyigu"]
background_mode = 1
background_color = Color(0.337255, 0.533333, 0.647059, 1)

[node name="ShootingPractice" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.965701, 0)
collision_layer = 2
script = ExtResource("1_ek1k8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_pawok")

[node name="Shooter" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00557077)
collision_layer = 2
script = ExtResource("3_wfwkm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Shooter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.103268, -0.0145228, 0.730408)
shape = SubResource("BoxShape3D_mqpo2")

[node name="Sprite3D" type="Sprite3D" parent="Player/Shooter"]
transform = Transform3D(0.26288, 0, 0, 0, 0.26288, 0, 0, 0, 0.26288, 0.0815883, -0.0905941, 0.730348)
visible = false
texture = ExtResource("1_lf1xq")

[node name="Timer" type="Timer" parent="Player/Shooter"]

[node name="MamaModel" parent="Player" instance=ExtResource("4_0p2sc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.911756, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.79936, 0.600853, 0, -0.600853, 0.79936, 0, 5.56511, 6.21309)
fov = 49.9816

[node name="Enemy" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.1581, 0.810088, 0.298431)
script = ExtResource("4_ifq1y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
shape = SubResource("CapsuleShape3D_6ppme")

[node name="Sprite3D" type="Sprite3D" parent="Enemy"]
texture = ExtResource("1_lf1xq")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(-0.03476, 0.999396, 0, -0.999396, -0.03476, 0, 0, 0, 1, -11.5481, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_la302")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(0.0347033, -0.997767, 0.0570761, -0.999396, -0.03476, 0, 0.00198396, -0.0570416, -0.99837, 13.7841, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
transform = Transform3D(1, -1.50612e-09, 0, 2.21917e-09, 1, 0, -2.32831e-10, 3.72529e-09, 1, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_la302")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(0.000266979, -0.00763664, 1.64764, -0.999568, -0.0345872, 0, 0.0347649, -0.994398, -0.0126533, 0.12593, 0, 16.4964)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(2, 6.29574e-06, 0.000931868, 6.20633e-06, 1.99982, -0.026931, -0.000931869, 0.026931, 1.99982, -0.298014, 8.61257, 0.0399667)
shape = SubResource("WorldBoundaryShape3D_la302")

[node name="StaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(0.000266933, -0.00767479, 0.99997, -0.999396, -0.03476, -3.78346e-09, 0.0347589, -0.999366, -0.00767943, 0.12593, 0, -10.5058)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4"]
transform = Transform3D(0.997584, 0.0694603, -0.00110517, 0.0694603, -0.997079, 0.0317754, 0.00110519, -0.0317754, -0.999494, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_la302")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(117.251, 0, 0, 0, 0.462619, -5.19253, 0, -104.77, -0.0229279, 0, 0.0210869, -1)
texture_filter = 0
texture = ExtResource("6_shwi7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fyigu")

[connection signal="firing" from="Player/Shooter" to="Player" method="_on_shooter_firing"]
[connection signal="animation_finished" from="Player/MamaModel/AnimationPlayer" to="Player" method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Enemy" to="Enemy" method="_on_area_entered"]

[editable path="Player/MamaModel"]
